--- a/webapp/WEB-INF/templates/admin/plugins/recastbots/modify_recastbot.html
+++ b/webapp/WEB-INF/templates/admin/plugins/recastbots/modify_recastbot.html
@@ -2,34 +2,34 @@
 <@tabs2 tab="recastbot" />
 
 <@box>
-	<@boxHeader title='#i18n{recastbots.modify_recastbot.title}' />
-	<@boxBody>
-    <@tform class="form-horizontal" method="post" name="modify_recastbot" action="jsp/admin/plugins/recastbots/ManageRecastBots.jsp">
-			<@messages errors=errors />
-			<input type="hidden" id="id" name="id" value="${recastbot.id}"/>
-			
-				<@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelBotKey}' helpKey='#i18n{recastbots.modify_recastbot.labelBotKey.help}' mandatory=true>
-					<@input type='text' name='bot_key' value='${recastbot.botKey}' />
-				</@formGroup>
-				<@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelName}' helpKey='#i18n{recastbots.modify_recastbot.labelName.help}' mandatory=true>
-					<@input type='text' name='name' value='${recastbot.name}' />
-				</@formGroup>
-				<@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelDescription}' helpKey='#i18n{recastbots.modify_recastbot.labelDescription.help}' mandatory=true>
-					<@input type='text' name='description' value='${recastbot.description}' />
-				</@formGroup>
-				<@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelAvatarUrl}' helpKey='#i18n{recastbots.modify_recastbot.labelAvatarUrl.help}' >
-					<@input type='text' name='avatar_url' value='${recastbot.avatarUrl}' />
-				</@formGroup>
-				<@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelLanguage}' helpKey='#i18n{recastbots.modify_recastbot.labelLanguage.help}' mandatory=true>
-					<@input type='text' name='language' value='${recastbot.language}' />
-				</@formGroup>
-				<@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelBotStatus}' helpKey='#i18n{recastbots.modify_recastbot.labelBotStatus.help}' mandatory=true>
-					<@select name='bot_status' items=status_list default_value='${recastbot.botStatus}' />
-				</@formGroup>
-				<@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelToken}' helpKey='#i18n{recastbots.modify_recastbot.labelToken.help}' mandatory=true>
-					<@input type='text' name='token' value='${recastbot.token}' />
-				</@formGroup>
-        <@actionButtons button1Name="action_modifyRecastBot" button2Name="view_manageRecastBot"/>
-    </@tform>
-	</@boxBody>
+    <@boxHeader title='#i18n{recastbots.modify_recastbot.title}' />
+    <@boxBody>
+        <@tform class="form-horizontal" method="post" name="modify_recastbot" action="jsp/admin/plugins/recastbots/ManageRecastBots.jsp">
+            <@messages errors=errors />
+            <input type="hidden" id="id" name="id" value="${recastbot.id}"/>
+
+                <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelBotKey}' helpKey='#i18n{recastbots.modify_recastbot.labelBotKey.help}' mandatory=true>
+                        <@input type='text' name='bot_key' value='${recastbot.botKey}' />
+                </@formGroup>
+                <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelName}' helpKey='#i18n{recastbots.modify_recastbot.labelName.help}' mandatory=true>
+                        <@input type='text' name='name' value='${recastbot.name}' />
+                </@formGroup>
+                <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelDescription}' helpKey='#i18n{recastbots.modify_recastbot.labelDescription.help}' mandatory=true>
+                        <@input type='text' name='description' value='${recastbot.description}' />
+                </@formGroup>
+                <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelAvatarUrl}' helpKey='#i18n{recastbots.modify_recastbot.labelAvatarUrl.help}' >
+                        <@input type='text' name='avatar_url' value='${recastbot.avatarUrl}' />
+                </@formGroup>
+                <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelLanguage}' helpKey='#i18n{recastbots.modify_recastbot.labelLanguage.help}' mandatory=true>
+                        <@select name='language' items=languages_list default_value='${recastbot.language}' />
+                </@formGroup>
+                <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelBotStatus}' helpKey='#i18n{recastbots.modify_recastbot.labelBotStatus.help}' mandatory=true>
+                        <@select name='bot_status' items=status_list default_value='${recastbot.botStatus}' />
+                </@formGroup>
+                <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelToken}' helpKey='#i18n{recastbots.modify_recastbot.labelToken.help}' mandatory=true>
+                        <@input type='text' name='token' value='${recastbot.token}' />
+                </@formGroup>
+                <@actionButtons button1Name="action_modifyRecastBot" button2Name="view_manageRecastBot"/>
+        </@tform>
+    </@boxBody>
 </@box>
