--- a/webapp/WEB-INF/templates/admin/plugins/recastbots/modify_recastbot.html
+++ b/webapp/WEB-INF/templates/admin/plugins/recastbots/modify_recastbot.html
@@ -29,6 +29,12 @@
                 <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelToken}' helpKey='#i18n{recastbots.modify_recastbot.labelToken.help}' mandatory=true>
                         <@input type='text' name='token' value='${recastbot.token}' />
                 </@formGroup>
+                <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelBotMode}' helpKey='#i18n{recastbots.modify_recastbot.labelBotMode.help}' mandatory=true>
+                        <@select name='standalone' items=modes_list default_value='${recastbot.standalone}' />
+                </@formGroup>
+                <@formGroup labelKey='#i18n{recastbots.modify_recastbot.labelWelcome}' helpKey='#i18n{recastbots.modify_recastbot.labelWelcomeMessage.help}' mandatory=false>
+                        <@input type='text' name='welcome_message' value='${recastbot.welcomeMessage!\'\'}' />
+                </@formGroup>
                 <@actionButtons button1Name="action_modifyRecastBot" button2Name="view_manageRecastBot"/>
         </@tform>
     </@boxBody>
